Fix: hide nav deck and banner subtitle on mobile

--- a/netlify/functions/preview/src/sass/components/_banner.scss
+++ b/netlify/functions/preview/src/sass/components/_banner.scss
@@ -255,6 +255,10 @@
     // Animation -- fade-in + ease-out
     animation: fadeInBannerTitle ease-out 2s forwards;
     animation-delay: 1500ms;
+
+    @include mqmax(medium) {
+        display: none;
+    }
 }
 
 .banner-buttons {
