--- a/netlify/functions/preview/src/sass/components/_navigation.scss
+++ b/netlify/functions/preview/src/sass/components/_navigation.scss
@@ -24,6 +24,13 @@
     }
 }
 
+.nav-deck.hideMobile {
+    @include mqmax(medium) {
+        display: none;
+    }
+
+}
+
 .nav-deck.showMobile {
     visibility: visible;
     scale: 1;
