--- a/netlify/functions/preview/src/sass/components/_vardan-cards.scss
+++ b/netlify/functions/preview/src/sass/components/_vardan-cards.scss
@@ -25,13 +25,13 @@
 
 .feature-card,
 .giving-card {
-    background-color: rgba(0, 0, 0, 0.02);
+    background-color: rgba(0, 0, 0, 0.025);
     border-radius: 8px;
     padding-block: 1.75rem;
     // Ensure padding is included in width calculation
     box-sizing: border-box;
     text-align: center;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16);
     border: 1px solid hsl(var(--clr-neutral-200));
     // aspect-ratio of card is fixed for all screen sizes
     // aspect-ratio: 0.95;
@@ -50,10 +50,6 @@
     h3+h4 {
         margin-top: -0.5rem !important;
         gap: 0;
-    }
-
-    p {
-        font-size: var(--fs-300);
     }
 }
 
@@ -95,7 +91,7 @@
 }
 
 .giving-card-description {
-    font-size: var(--fs-300);
+    font-size: var(--fs-375);
 }
 
 .feature-card-link,
